Closed
Bug 104297
Opened 24 years ago
Closed 24 years ago
reproducable crash at panasonic.de
Categories
(Core :: DOM: Core & HTML, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: jens-uwe, Assigned: bryner)
References
()
Details
Attachments
(3 files)
|
1.21 KB,
patch
|
Details | Diff | Splinter Review | |
|
1.27 KB,
text/plain
|
Details | |
|
1.82 KB,
patch
|
jag+mozilla
:
review+
sfraser_bugs
:
superreview+
|
Details | Diff | Splinter Review |
From Bugzilla Helper:
User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:0.9.5) Gecko/20011011
BuildID: 2001101102 (pre 0.9.5 branch)
there is a reproducable crash at the mentioned adress.
Reproducible: Always
Steps to Reproduce:
1. go to
http://www.panasonic.de/www/ProduktSrv/de/produkte/8431401440?InfoID=120708&RUBRIK=-1
2. click at "detailansicht" below the picture
3. see Mozilla crash
Actual Results: MOzilla crashes
Expected Results: Mozilla should not crash
while it crashes here always, it was hard to reproduce it on Win (asked IRC).
I just tried to send a talkback with NS6.1 (which also always crashes, so its an
older bug), but it doesn't give me an TIB numbe and doesn't tell me anything
about the crash :-/
hopefully you can find out something about this even with my crappy bug report.
sorry for that. but the linux.tgz doesn't come with talkback and my gdb is the
version not working with mozilla (and at work I don't want to upgrade essential
pieces of my working environment)
Comment 1•24 years ago
|
||
This is my talkback with crash on the 0.9.5 branch build 10/11
Incident ID 36587500
Stack Signature 0x000004b0 6b3d1969
Bug ID
Trigger Time 2001-10-11 19:31:59
Email Address asa@mozilla.org
URL visited
User Comments bug 104297
Build ID 2001101102
Product ID MozillaBranch
Platform ID LinuxIntel
Trigger Reason SIGSEGV: Segmentation Fault: (signal 11)
Stack Trace
0x000004b0
libnsappshell.so + 0x1111f (0x4068511f)
libwidget_gtk.so + 0x18c6a (0x407fac6a)
libwidget_gtk.so + 0x18b95 (0x407fab95)
libwidget_gtk.so + 0x18c0a (0x407fac0a)
libwidget_gtk.so + 0x1c6ac (0x407fe6ac)
libwidget_gtk.so + 0x1c83d (0x407fe83d)
libwidget_gtk.so + 0x1ebcc (0x40800bcc)
libgtk-1.2.so.0 + 0x8ddf9 (0x4026ddf9)
libgtk-1.2.so.0 + 0xbb9bd (0x4029b9bd)
libgtk-1.2.so.0 + 0xbae02 (0x4029ae02)
libgtk-1.2.so.0 + 0xb8f05 (0x40298f05)
libgtk-1.2.so.0 + 0xee31c (0x402ce31c)
libgtk-1.2.so.0 + 0xf5eae (0x402d5eae)
libgtk-1.2.so.0 + 0x8ddf9 (0x4026ddf9)
libgtk-1.2.so.0 + 0xbae3b (0x4029ae3b)
libgtk-1.2.so.0 + 0xb8f05 (0x40298f05)
libgtk-1.2.so.0 + 0xee31c (0x402ce31c)
libgtk-1.2.so.0 + 0x8d04a (0x4026d04a)
libwidget_gtk.so + 0x1397f (0x407f597f)
libgdk-1.2.so.0 + 0x1753b (0x4031853b)
libglib-1.2.so.0 + 0x10186 (0x40348186)
libglib-1.2.so.0 + 0x10751 (0x40348751)
libglib-1.2.so.0 + 0x108f1 (0x403488f1)
libgtk-1.2.so.0 + 0x8c8e9 (0x4026c8e9)
libwidget_gtk.so + 0xd8b0 (0x407ef8b0)
libnsappshell.so + 0xdcaa (0x40681caa)
mozilla-bin + 0x6da0 (0x0804eda0)
mozilla-bin + 0x7615 (0x0804f615)
libc.so.6 + 0x189cb (0x404419cb)
Comment 2•24 years ago
|
||
looks like a crash making the popup
javascript:popup('/produkte/graphics/datenbank/nv-ds88eg_9.jpg')
Comment 3•24 years ago
|
||
This stack have no symbols.. :-(
-> Dom0 for the start... (JS related)
Assignee: asa → jst
Component: Browser-General → DOM Level 0
QA Contact: doronr → desale
Comment 4•24 years ago
|
||
I don't see a crash on Win2k, is this linux only?
I did find some problems in the DOM code that this site exposed, calling
window.close() on a window that already has been closed ends up throwing an
exception, which causes the site to not open the popup more than once. Patch for
that coming up.
Comment 5•24 years ago
|
||
Comment 7•24 years ago
|
||
Comment 8•24 years ago
|
||
Comment on attachment 53722 [details] [diff] [review]
Fix even more assertions and exceptions.
r=/me
Attachment #53722 -
Flags: review+
Comment 9•24 years ago
|
||
Comment on attachment 53722 [details] [diff] [review]
Fix even more assertions and exceptions.
sr=sfraser
Attachment #53722 -
Flags: superreview+
Comment 10•24 years ago
|
||
Fix for the exceptions and assertions checked in, now the remaining problem is
the linux only crash in the focus code, over to the focus people, starting with
saari.
Assignee: jst → saari
Comment 12•24 years ago
|
||
*** Bug 106029 has been marked as a duplicate of this bug. ***
| Reporter | ||
Comment 13•24 years ago
|
||
werner:
as we now have a Suse guy in our round here, can you please make sure to deliver
a version of GDB with your distribution which works with mozilla? It seems that
this is basicly any version but 5.0. To test it, just start mozilla with
"./mozilla -g" and start mozilla in the DDD/GDB you get then with "run". If it
says something like "ptrace: No such process.", then you have the wrong version
of gdb...
The Suse 7.2 system I have here has a wrong version, haven't tried 7.3 so far.
Just see my crappy bug report here which is mainly caused by the fact that I
don't have a "good" gdb :-/
Comment 14•24 years ago
|
||
With SuSE Linux 7.3 the gdb snapshot 20010316(dejagnu) with
several patches is provided.
One problem in past was simply that several gdb versions
where developed and that required changes havn't reached
the gdb 5.x tree.
| Assignee | ||
Comment 15•24 years ago
|
||
This has been fixed by my patch for bug 107844. There is a new problem that
this exposes where the popup window immediately closes. This has been filed as
bug 120209.
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•