Fixing part of bug 104297. Making calling window.close() on an already closed window not throw exceptions and not assert. r=jaggernaut@netscape.com, sr=sfraser@netscape.com